<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/book_image"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:background="@color/blue"
                app:srcCompat="@drawable/ic_baseline_android_24"
                android:layout_margin="10dp"
                android:contentDescription="@string/book_image"/>

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="@string/book_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:id="@+id/page_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="@string/page_number"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

            <TextView
                android:id="@+id/book_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="@string/book_summary"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>